--- a/Windows-Lite-сборки.html
+++ b/Windows-Lite-сборки.html
@@ -159,7 +159,7 @@
           <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.194)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)<br>
           <br>У этой версии сборки проблема с OOBE (Первоначальная настройка)
         </p>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro 21H2 V3 Lite by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1YucdnguVIMR9stTUjw7pVtMrH45bOgI0/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro 21H2 V3 Lite by Adderly [Google Drive]</a>
         <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/LXYmVQRL#HY83iFF9efOzhDhR7T-nr4DnESFZqC0MoBHr3UhDzMM" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4">Windows 8.1 Pro V5 Lite by Adderly (13.09.2022)<br>
@@ -184,8 +184,8 @@
           <br>Образ весит 3.58 GB, после установки Windows занимает 10 GB. <br>
           <br>Образ основан на официальном MSDN Windows 8.1.<br>
         </p>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 8.1 Pro V5 Lite by Adderly [Google Drive]</a>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-5" target="_blank">Скачать ​​Windows 8.1 Pro V5  Lite by Adderly [MediaFire]</a>
+        <a href="https://drive.google.com/file/d/1rfTT_SWEvuXRTssfWnbbk31rUfc3Lglp/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 8.1 Pro V5 Lite by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/xcqh0csoq79ij14/Windows+8.1+V5+Lite+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-5" target="_blank">Скачать ​​Windows 8.1 Pro V5  Lite by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/afQXiQbL#w43-0ovKg05GrCn1JHjBbNhID8F4zcpgHujBxO8g3MU" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-6" target="_blank">Скачать ​​Windows 8.1 Pro V5 Lite by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-6">Windows 7 Ultimate V4 Lite by Adderly (13.09.2022)<br>
         </h6>
@@ -209,7 +209,7 @@
           <br>Образ основан на официальном MSDN Windows 7.
         </p>
         <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 7 Ultimate V4 Lite by Adderly [Google Drive]</a>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-8" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MediaFire]</a>
+        <a href="https://www.mediafire.com/file/0bl2s8d3bl45q15/Windows+7+V4+Lite+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-8" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/jWAjnYpb#mOuOZyNmZBtYIhplJB-h994XMUlYA2LHmmjS6PW5ZGw" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-9" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MEGA.NZ]</a>
         <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
         <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-10">Сборки Windows 10</a>
@@ -239,15 +239,15 @@
           <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.194)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)<br>
           <br>У этой версии сборки проблема с OOBE (Первоначальная настройка)
         </p>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro 21H2 V3 Lite by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1YucdnguVIMR9stTUjw7pVtMrH45bOgI0/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro 21H2 V3 Lite by Adderly [Google Drive]</a>
         <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/LXYmVQRL#HY83iFF9efOzhDhR7T-nr4DnESFZqC0MoBHr3UhDzMM" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4">Windows 8.1 Pro V5 Lite by Adderly (13.09.2022)<br>
         </h6>
-        <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-5" src="images/Windows8.1ByAdderly-2022-08-14-12-47-15.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows8.1ByAdderly-2022-08-14-12-47-53.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-7" src="images/Windows8.1ByAdderly-2022-08-14-12-48-10.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-8" src="images/Windows8.1ByAdderly-2022-08-14-12-48-18.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-5" src="images/Windows8.1ByAdderly-2022-08-14-12-47-15.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" src="images/Windows8.1ByAdderly-2022-08-14-12-47-53.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-7" src="images/Windows8.1ByAdderly-2022-08-14-12-48-10.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/Windows8.1ByAdderly-2022-08-14-12-48-18.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-text u-text-body-alt-color u-text-5"> Сборка обновлена до Update 3 <br>
           <br>Добавлена папка KMS <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ<br>
@@ -264,17 +264,17 @@
           <br>Образ весит 3.58 GB, после установки Windows занимает 10 GB. <br>
           <br>Образ основан на официальном MSDN Windows 8.1.<br>
         </p>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 8.1 Pro V5 Lite by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1YucdnguVIMR9stTUjw7pVtMrH45bOgI0/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-4" target="_blank">Скачать Windows 8.1 Pro V5 Lite by Adderly [Google Drive]</a>
         <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-5" target="_blank">Скачать ​​Windows 8.1 Pro V5  Lite by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/afQXiQbL#w43-0ovKg05GrCn1JHjBbNhID8F4zcpgHujBxO8g3MU" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-6" target="_blank">Скачать ​​Windows 8.1 Pro V5 Lite by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-6">Windows 7 Ultimate V4 Lite by Adderly (13.09.2022)<br>
         </h6>
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-9" src="images/Windows7ByAdderly-2022-08-14-13-01-20.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-10" src="images/Windows7ByAdderly-2022-08-14-13-01-371.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-9" src="images/Windows7ByAdderly-2022-08-14-13-01-20.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-10" src="images/Windows7ByAdderly-2022-08-14-13-01-371.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-11" src="images/Windows7x64-2022-06-25-21-17-101.png" alt="" data-image-width="673" data-image-height="335">
-        <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-12" src="images/2022-08-14130414.png" alt="" data-image-width="447" data-image-height="211">
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-13" src="images/Windows7ByAdderly-2022-08-14-13-08-06.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-14" src="images/Windows7Lite2.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-12" src="images/2022-08-14130414.png" alt="" data-image-width="447" data-image-height="211">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-13" src="images/Windows7ByAdderly-2022-08-14-13-08-06.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-14" src="images/Windows7Lite2.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-align-center-lg u-align-center-sm u-text u-text-white u-text-7"> Обновления на 2011 год. (Service Pack 1) <br>
           <br>Добавлен активатор.<br>
           <br>Добавлена папка "от Марка Аддерли" в которой находятся инсталяторы самых нужных и авторских программ&nbsp;<br>
@@ -289,7 +289,7 @@
           <br>Образ основан на официальном MSDN Windows 7.
         </p>
         <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 7 Ultimate V4 Lite by Adderly [Google Drive]</a>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-8" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MediaFire]</a>
+        <a href="https://www.mediafire.com/file/0bl2s8d3bl45q15/Windows+7+V4+Lite+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-8" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MediaFire]</a>
         <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-9" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MEGA.NZ]</a>
       </div>
     </section>
