--- a/Windows-XP-сборки.html
+++ b/Windows-XP-сборки.html
@@ -147,7 +147,9 @@
           <br>Образ весит 0.43 GB, после установки Windows занимает 1.53 GB<br>
           <br>Образ основан на официальном Windows XP With Service Pack 3 (2007)<br>
         </p>
-        <a href="https://mega.nz/file/ystS0SoQ#wVHP_F2rHkoTl50Z_OmhTZYFE5vR8TcNVucsTQzW6Lg" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows XP V1 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1x38fTZcwNe9q0AewevyRwgA_VFkuhcsQ/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows XP V1 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/7ekfs29v0d1hgut/Windows+XP+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-2" target="_blank">Скачать Windows XP V1 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/ystS0SoQ#wVHP_F2rHkoTl50Z_OmhTZYFE5vR8TcNVucsTQzW6Lg" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-3" target="_blank">Скачать Windows XP V1 by Adderly [MEGA.NZ]</a>
       </div>
     </section>
     
