--- a/Windows-Lite-сборки.html
+++ b/Windows-Lite-сборки.html
@@ -44,7 +44,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script><script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6276505933668266" crossorigin="anonymous"></script></head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-12 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-28 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -57,7 +57,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-28 u-border-palette-1-base u-button-style u-custom-color-28 u-hover-custom-color-28 u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
@@ -70,12 +70,12 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-28 u-border-palette-1-base u-button-style u-custom-color-28 u-hover-custom-color-28 u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="https://forms.gle/ZY5cRsox5CdjH8v58">Оставить отзыв</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-28 u-border-palette-1-base u-button-style u-custom-color-28 u-hover-custom-color-28 u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
@@ -84,7 +84,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-28 u-border-palette-1-base u-button-style u-custom-color-28 u-hover-custom-color-28 u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="СтарыйСофт-для-Windows-XPVista.html">Софт для старых Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
@@ -160,7 +160,7 @@
           <br>У этой версии сборки проблема с OOBE (Первоначальная настройка)
         </p>
         <a href="https://drive.google.com/file/d/1YucdnguVIMR9stTUjw7pVtMrH45bOgI0/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro 21H2 V3 Lite by Adderly [Google Drive]</a>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MediaFire]</a>
+        <a href="https://www.mediafire.com/file/pje9vpqbm7sk2y9/Windows+11+V3+Lite+21H2+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/LXYmVQRL#HY83iFF9efOzhDhR7T-nr4DnESFZqC0MoBHr3UhDzMM" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4">Windows 8.1 Pro V5 Lite by Adderly (13.09.2022)<br>
         </h6>
@@ -208,7 +208,7 @@
           <br>Образ весит 3.08 GB, после установки Windows занимает 8.64 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.
         </p>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 7 Ultimate V4 Lite by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1RxS1i7FbEmV7L-Z9_PsDk76CRqx17oZW/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 7 Ultimate V4 Lite by Adderly [Google Drive]</a>
         <a href="https://www.mediafire.com/file/0bl2s8d3bl45q15/Windows+7+V4+Lite+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-8" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/jWAjnYpb#mOuOZyNmZBtYIhplJB-h994XMUlYA2LHmmjS6PW5ZGw" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-9" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MEGA.NZ]</a>
         <p class="u-text u-text-default u-text-white u-text-8">Смотрите так же:</p>
@@ -240,7 +240,7 @@
           <br>У этой версии сборки проблема с OOBE (Первоначальная настройка)
         </p>
         <a href="https://drive.google.com/file/d/1YucdnguVIMR9stTUjw7pVtMrH45bOgI0/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro 21H2 V3 Lite by Adderly [Google Drive]</a>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MediaFire]</a>
+        <a href="https://www.mediafire.com/file/pje9vpqbm7sk2y9/Windows+11+V3+Lite+21H2+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/LXYmVQRL#HY83iFF9efOzhDhR7T-nr4DnESFZqC0MoBHr3UhDzMM" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-3" target="_blank">Скачать ​Windows 11 Pro 21H2 V3 Lite by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-4">Windows 8.1 Pro V5 Lite by Adderly (13.09.2022)<br>
         </h6>
@@ -288,14 +288,14 @@
           <br>Образ весит 3.08 GB, после установки Windows занимает 8.64 GB. <br>
           <br>Образ основан на официальном MSDN Windows 7.
         </p>
-        <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 7 Ultimate V4 Lite by Adderly [Google Drive]</a>
+        <a href="https://drive.google.com/file/d/1RxS1i7FbEmV7L-Z9_PsDk76CRqx17oZW/view?usp=sharing" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-7" target="_blank">Скачать Windows 7 Ultimate V4 Lite by Adderly [Google Drive]</a>
         <a href="https://www.mediafire.com/file/0bl2s8d3bl45q15/Windows+7+V4+Lite+by+Adderly.iso/file" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-8" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MediaFire]</a>
         <a href="404.html" data-page-id="1800220873" class="u-active-custom-color-25 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-9" target="_blank">Скачать ​​​Windows 7 Ultimate V4 Lite by Adderly [MEGA.NZ]</a>
       </div>
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-custom-color-12 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+    <footer class="u-align-center u-clearfix u-custom-color-28 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2022
         </p>
       </div></footer>
