--- a/Windows-Mini-сборки.html
+++ b/Windows-Mini-сборки.html
@@ -42,7 +42,7 @@
     ".replace(/gascript/g, 'script'));
     }
     </script><script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6276505933668266" crossorigin="anonymous"></script></head>
-  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-12 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="ru"><header class="u-clearfix u-custom-color-28 u-header u-sticky u-header" id="sec-c15b"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
@@ -55,7 +55,7 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-active-custom-color-28 u-border-palette-1-base u-button-style u-custom-color-28 u-hover-custom-color-28 u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-23" href="Сборки-от-Аддерли.html" style="padding: 10px 20px;">Главная</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Сборки-от-Аддерли.html">Главная</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-XP-сборки.html">Сборки Windows XP</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-7-сборки.html">Сборки Windows 7</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-8-0-сборки.html">Сборки Windows 8.0</a>
@@ -68,12 +68,12 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Windows-PE-от-Аддерли.html">Windows PE от Аддерли</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-28 u-border-palette-1-base u-button-style u-custom-color-28 u-hover-custom-color-28 u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-23" href="Новости.html" style="padding: 10px 20px;">Новости</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Новости.html">Новости</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="https://forms.gle/ZY5cRsox5CdjH8v58">Оставить отзыв</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="https://donatello.to/adderly">Поддержать автора</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-28 u-border-palette-1-base u-button-style u-custom-color-28 u-hover-custom-color-28 u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-23" href="Информация-о-сборках.html" style="padding: 10px 20px;">Информация о сборках</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Информация-о-сборках.html">Информация о сборках</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Содержимое-сборок.html">Содержимое сборок</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Советы-по-использованию.html">Советы по использованию</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Про-uTorrent-раздачи.html">Про uTorrent раздачи</a>
@@ -82,7 +82,7 @@
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Как-устанавливать.html">Как устанавливать</a>
 </li></ul>
 </div>
-</li><li class="u-nav-item"><a class="u-active-custom-color-12 u-border-palette-1-base u-button-style u-custom-color-12 u-hover-custom-color-12 u-nav-link u-text-active-custom-color-10 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
+</li><li class="u-nav-item"><a class="u-active-custom-color-28 u-border-palette-1-base u-button-style u-custom-color-28 u-hover-custom-color-28 u-nav-link u-text-active-custom-color-24 u-text-hover-custom-color-23" href="Софт-от-Аддерли.html" style="padding: 10px 20px;">Софт от Аддерли</a><div class="u-nav-popup"><ul class="u-border-1 u-border-grey-75 u-h-spacing-15 u-nav u-unstyled u-v-spacing-12"><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Софт-от-Аддерли.html">Софт от Аддерли</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Старые-версии-Windows.html">Старые версии Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="СтарыйСофт-для-Windows-XPVista.html">Софт для старых Windows</a>
 </li><li class="u-nav-item"><a class="u-active-custom-color-11 u-button-style u-grey-50 u-hover-palette-1-base u-nav-link" href="Ключи-от-Аддерли.html">Ключи от Аддерли</a>
@@ -136,7 +136,7 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-771a">
+    <section class="u-align-center u-clearfix u-image u-section-1" id="sec-771a" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">Сборки Windows Mini</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate Mini V2 by Adderly (16.08.2022)</h6>
@@ -209,7 +209,7 @@
         <a href="https://mega.nz/file/DsMDiKTR#fUzPiQOQdFi_ZaRZxTqelnxadHaJyn5AEJs8A22gcKo" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-21" target="_blank">Скачать ​Windows 7 Starter Micro by Adderly [MEGA.NZ]</a>
         <h6 class="u-text u-text-default u-text-white u-text-14">Windows XP SP3 Mini by Adderly (12.09.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-image-16" src="images/WindowsXPProfessional-2022-09-15-09-29-30.png" alt="" data-image-width="800" data-image-height="600">
-        <p class="u-text u-text-default u-text-white u-text-15">Образ весит 0.29 GB, после установки Windows занимает 1 GB.&nbsp;<br>Образ может быть записан на самые маленькие флешки.
+        <p class="u-text u-text-black u-text-default u-text-15">Образ весит 0.29 GB, после установки Windows занимает 1 GB.&nbsp;<br>Образ может быть записан на самые маленькие флешки.
         </p>
         <a href="https://drive.google.com/file/d/1F7FoHwcVgAGe3Zw1Ima76Z740XI0Z05j/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-22" target="_blank">Скачать Windows XP Mini SP3 by Adderly [Google Drive]</a>
         <a href="https://www.mediafire.com/file/6mc6p0gshi4nkvy/Windows+XP+Mini+By+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-hover-custom-color-11 u-palette-1-base u-radius-50 u-btn-23" target="_blank">Скачать ​​Windows XP Mini SP3  by Adderly [MediaFire]</a>
@@ -228,7 +228,7 @@
     </section>
     
     
-    <footer class="u-align-center u-clearfix u-custom-color-12 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+    <footer class="u-align-center u-clearfix u-custom-color-28 u-footer u-footer" id="sec-7e29"><div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Mark Adderly / Марк Аддерли<br>2022
         </p>
       </div></footer>
