--- a/Windows-Mini-сборки.html
+++ b/Windows-Mini-сборки.html
@@ -138,7 +138,7 @@
       </div></header>
     <section class="u-align-center u-clearfix u-image u-section-1" id="sec-771a" data-image-width="1920" data-image-height="1200">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">Сборки Windows Mini</h1>
+        <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows Mini</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate Mini V2 by Adderly (16.08.2022)</h6>
         <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows7MiniV2byAdderly-2022-08-16-22-23-49.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-md u-expanded-width-xs u-image u-image-default u-image-2" src="images/Windows7MiniV2byAdderly-2022-08-16-22-32-08.png" alt="" data-image-width="1366" data-image-height="768">
