--- a/Ключи-от-Аддерли.html
+++ b/Ключи-от-Аддерли.html
@@ -139,14 +139,15 @@
     <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-8305">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Ключи Windows от Аддерли</h1>
-        <h3 class="u-text u-text-default u-text-2">Все ключи были проверены в начале 2022 года, и от старых версий они нужны для начала установки. В сборках от Аддерли ключи указывать не нужно, потому что в папке есть KMS.</h3>
+        <h3 class="u-text u-text-2">Все ключи были проверены в начале 2022 года, и от старых версий они нужны для начала установки. В сборках от Аддерли ключи указывать не нужно, потому что в папке есть KMS.</h3>
         <h3 class="u-text u-text-3">Так же если вы скачали старые Windows с интернета, то ключи могут не подойти, так как может быть другой Сервис Пак, OSR, и т.д.<br>Если вы скачайте с сайта Сборки от Аддерли, ключи по любому подойдут.
         </h3>
         <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-gradient u-none u-radius-50 u-btn-1">Скачать старые Windows</a>
         <h3 class="u-text u-text-default u-text-4"> Windows 95<br>31797-OEM-0026875-46112<br>
           <br>Windows NT 4.0<br>419-0140126<br>
           <br>Windows 98 Second Edition<br>RW9MG-QR4G3-2WRR9-TG7BH-33GXB<br>
-          <br>Windows 2000 SP3/SP4<br>JPH7V-XX964-74GDT-Y6P4Q-TJTFQ &nbsp;<br>
+          <br>Windows 2000 SP3<br>DDTPV-TXMX7-BBGJ9-WGY8K-B9GHM<br>
+          <br>Windows 2000 SP4<br>JPH7V-XX964-74GDT-Y6P4Q-TJTFQ &nbsp;<br>
           <br>Windows Millenium Edition<br>KBXCT-RKTJX-2XFWB-D6YW6-MPY7M<br>
           <br>Windows XP Professional SP3<br>VHHWK-69Y6M-WM8YD-MB8TR-K86FB<br>
           <br>Windows XP Starter SP2<br>FXVXF-WRQGK-6D877-4XYRM-QPK7T<br>
