--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -138,16 +138,35 @@
         </nav>
       </div></header>
     <section class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-clearfix u-image u-section-1" id="sec-2e85" data-image-width="3840" data-image-height="2400">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 11<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 11 Pro V3 21H2 by Adderly (15.08.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 11 Pro 22H2 by Adderly (20.09.2022)<br>
         </h6>
-        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows11byAdderly-2022-08-15-21-31-17.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows11byAdderly-2022-08-15-21-30-26.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-1" src="images/Win11ByAdderly22H2_1.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-2" src="images/Win11ByAdderly22H2_2.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/2022-08-15212113.png" alt="" data-image-width="545" data-image-height="293">
         <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-15211852.png" alt="" data-image-width="815" data-image-height="373">
         <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
+          <br>Удалены приложения "Почта, Люди, One Note, Get Started, Камера"<br>
+          <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64<br>
+          <br>Интегрированы Framework 4.8, 4.7.2<br>
+          <br>Включён DirectPlay<br>
+          <br>Добавлен диспетчер задач в ПКМ по рабочему столу (по желанию можно выключить)<br>
+          <br>Образ весит 5.67 GB, после установки Windows занимает 20.1 GB<br>
+          <br>Образ основан на официальном MSDN Windows 11 v2 22H2 (22621.382)<br>Инсталятор использован от моей предыдущей сборки 22000.194, дабы не было проверки!<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)<br>
+        </p>
+        <a href="https://drive.google.com/file/d/1IHdJmVkwG-D-8Xd6mvYB4DniPYDOx6PH/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать ​Windows 11 Pro 22H2 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/bihhrswi1vvs5j7/Windows+11+22H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank"> Скачать ​Windows 11 Pro 22H2 by Adderly [MediaFire]</a>
+        <a href="404.html" data-page-id="1800220873" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-29 u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 Pro 22H2 by Adderly [MEGA.NZ]</a>
+        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-4">Как обойти проверку Windows 11</a>
+        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 11 Pro V3 21H2 by Adderly (15.08.2022)<br>
+        </h6>
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows11byAdderly-2022-08-15-21-31-17.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows11byAdderly-2022-08-15-21-30-26.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-08-15212113.png" alt="" data-image-width="545" data-image-height="293">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/2022-08-15211852.png" alt="" data-image-width="815" data-image-height="373">
+        <p class="u-align-center-xl u-text u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ,<br>а так же рег файлы, чтобы вернуть старый просмотрщик фото и&nbsp;чтобы отключать и включать обновления.&nbsp;<br>
           <br>Удалены приложения "Почта, Люди, One Note, Get Started, Камера"<br>
           <br>Интегрированы Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
@@ -156,15 +175,14 @@
           <br>Образ весит 6.23 GB, после установки Windows занимает 21 GB<br>
           <br>Образ основан на официальном MSDN Windows 11 21H2 (22000.194)<br>(Основана на старой, чтобы вы обновились сами. Сделано это для того, чтобы работали параметры реестра для того, чтобы обойти проверку.)<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!)<br>
         </p>
-        <a href="https://drive.google.com/file/d/1nXIKyTFP3iapDrB4KXNSchoWY42jVL3S/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать Windows 11 Pro V3 21H2 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/jtw0kmrt8dgi44q/Windows+11+V3+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-2" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [MediaFire]</a>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/Windows%2011%20V3%2021H2%20by%20Adderly.torrent" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-21 u-radius-50 u-btn-3" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [Torrent]</a>
-        <a href="https://mega.nz/file/M5YzXDrL#0UqRQNv_qTs4fREYjUtjN3QllGsIT45nTdJKRlEEHoU" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-29 u-radius-50 u-btn-4" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [MEGA.NZ]</a>
-        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-5">Как обойти проверку Windows 11</a>
-        <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-6">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 8.1</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-8">Сборки Windows 7</a>
+        <a href="https://drive.google.com/file/d/1nXIKyTFP3iapDrB4KXNSchoWY42jVL3S/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-5" target="_blank">Скачать Windows 11 Pro V3 21H2 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/jtw0kmrt8dgi44q/Windows+11+V3+21H2+by+Adderly.iso/file" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-5 u-radius-50 u-btn-6" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/M5YzXDrL#0UqRQNv_qTs4fREYjUtjN3QllGsIT45nTdJKRlEEHoU" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-29 u-radius-50 u-btn-7" target="_blank"> Скачать Windows 11 Pro V3 21H2 by Adderly [MEGA.NZ]</a>
+        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-8">Как обойти проверку Windows 11</a>
+        <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-9">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-10">Сборки Windows 8.1</a>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-11">Сборки Windows 7</a>
       </div>
     </section>
     
