--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -150,36 +150,38 @@
           </span>
           <br>
         </h1>
-        <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-1">Старый софт для Windows XP</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-radius-50 u-btn-2">Сборки Windows 7</a>
-        <a href="Windows-Mini-сборки.html" data-page-id="751803690" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-3">Сборки Windows Mini</a>
+        <h3 class="u-text u-text-white u-text-2">Windows 11 22H2 Без проверки доступна уже на сайте!</h3>
+        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-radius-50 u-btn-1">Сборки Windows 7</a>
+        <a href="Windows-Mini-сборки.html" data-page-id="751803690" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-2">Сборки Windows Mini</a>
+        <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-3">Старый софт для Windows XP</a>
         <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-4">Информация о сборках</a>
-        <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-5">Windows PE</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-radius-50 u-btn-6">Сборки Windows 8.0</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-7">Сборки Windows 8.1</a>
-        <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-7 u-radius-50 u-btn-8">Советы по использованию</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-9">Сборки Windows 10</a>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-10">Сборки Windows 11</a>
-        <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-11">Новости</a>
-        <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-12">Ключи от Аддерли</a>
-        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-13">Windows Lite x32 сборки</a>
-        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-14">Windows Lite сборки</a>
-        <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-15" target="_blank">Предложить идею&nbsp;</a>
-        <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-31 u-radius-50 u-btn-16" target="_blank">Обновления Windows</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-5">Сборки Windows 8.1</a>
+        <a href="Советы-по-использованию.html" data-page-id="19100686" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-7 u-radius-50 u-btn-6">Советы по использованию</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-radius-50 u-btn-7">Сборки Windows 8.0</a>
+        <a href="Windows-PE-от-Аддерли.html" data-page-id="1996302821" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-29 u-radius-50 u-btn-8">Windows PE</a>
+        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-9">Сборки Windows 11</a>
+        <a href="Новости.html" data-page-id="57527006" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-19 u-radius-50 u-btn-10">Новости</a>
+        <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-30 u-radius-50 u-btn-11">Ключи от Аддерли</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-12">Сборки Windows 10</a>
+        <a href="Windows-Lite-сборки.html" data-page-id="1517191" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-13">Windows Lite сборки</a>
+        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-15 u-radius-50 u-btn-14">Windows Lite x32 сборки</a>
+        <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-31 u-radius-50 u-btn-15" target="_blank">Обновления Windows</a>
+        <a href="https://forms.gle/sfhwBjX9DeVS5Qxu6" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-20 u-radius-50 u-btn-16" target="_blank">Предложить идею&nbsp;</a>
         <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-18 u-radius-50 u-btn-17">Софт от Аддерли</a>
-        <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-18">Старые Windows</a>
-        <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-19" target="_blank">Как устанавливать сборки от Аддерли</a>
-        <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-20" target="_blank">По поводу uTorrent раздач</a>
-        <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-27 u-radius-50 u-btn-21" target="_blank">Проверки на целостность</a>
-        <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-22" target="_blank">Поддержать Автора сборок</a>
-        <a href="https://t.me/adderlywindows" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-23" target="_blank">Сборки от Аддерли Telegram</a>
-        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-24" target="_blank">Сборки от Аддерли YouTube</a>
+        <a href="Как-устанавливать.html" data-page-id="56301212" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-28 u-radius-50 u-btn-18" target="_blank">Как устанавливать сборки от Аддерли</a>
+        <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-19">Старые Windows</a>
+        <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-27 u-radius-50 u-btn-20" target="_blank">Проверки на целостность</a>
+        <a href="https://donatello.to/adderly" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-17 u-radius-50 u-btn-21" target="_blank">Поддержать Автора сборок</a>
+        <a href="Про-uTorrent-раздачи.html" data-page-id="145580229" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-22" target="_blank">По поводу uTorrent раздач</a>
+        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-23" target="_blank">Сборки от Аддерли YouTube</a>
+        <a href="https://t.me/adderlywindows" class="u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-24" target="_blank">Сборки от Аддерли Telegram</a>
         <a href="Отзывы-и-обзоры.html" data-page-id="624812624" class="u-align-center-md u-align-center-sm u-align-center-xs u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-25">Обзоры и отзывы о Сборках от Аддерли</a>
-        <h3 class="u-hidden-sm u-hidden-xs u-text u-text-white u-text-2"> Недавний ролик</h3>
-        <div class="u-align-center u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-hidden-sm u-hidden-xs u-preserve-proportions u-video u-video-contain u-video-1">
+        <h3 class="u-hidden-sm u-hidden-xs u-text u-text-white u-text-3"> Недавний ролик</h3>
+        <div class="u-align-center u-expanded-width u-hidden-sm u-hidden-xs u-preserve-proportions u-video u-video-contain u-video-1">
           <div class="embed-responsive embed-responsive-1">
             <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube.com/embed/kCKpE7agRz8?mute=1&amp;showinfo=0&amp;controls=1&amp;start=0&amp;autoplay=1" data-autoplay="1" frameborder="0" allowfullscreen=""></iframe>
           </div>
+          <div class="u-preserve-proportions-child" style="padding-top: 56.14%;"></div>
         </div>
       </div>
     </section>
