--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -144,12 +144,12 @@
         <h1 class="u-text u-text-white u-text-1">Сборки Windows 7</h1>
         <h6 class="u-text u-text-default u-text-white u-text-2">Windows 7 Ultimate V5 by Adderly (09.10.2022)<br>
         </h6>
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows7x64-2022-10-09-23-56-41.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows7ByAdderly-2022-08-14-13-01-371.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows7x64-2022-10-10-12-12-37.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows7x64-2022-10-10-12-13-07.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows7x64-2022-06-25-21-17-101.png" alt="" data-image-width="673" data-image-height="335">
         <img class="u-expanded-width-xs u-image u-image-default u-image-4" src="images/2022-08-14130414.png" alt="" data-image-width="447" data-image-height="211">
-        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7ByAdderly-2022-08-14-13-08-06.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7ByAdderly-2022-08-14-13-08-29.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows7x64-2022-10-10-12-33-29.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows7x64-2022-10-10-12-33-15.png" alt="" data-image-width="1366" data-image-height="768">
         <p class="u-align-center-lg u-align-center-md u-text u-text-white u-text-3"> Обновления на октябрь 2022 год. (Service Pack 1) <br>
           <br>Добавлена папка "от Марка Аддерли" в которой находится активатор, и инсталяторы самых нужных и авторских программ <br>
           <br>Интегрированы Framework 4.8, 4.7.2, 3.5<br>
@@ -158,12 +158,14 @@
           <br>Отключены гаджеты&nbsp;(по желанию можно вернуть)&nbsp;<br>
           <br>Добавлен диспетчер задач в ПКМ по рабочему столу <br>
           <br>Образ весит 5.46 GB, после установки Windows занимает 16.4 GB. <br>
-          <br>Образ основан на официальном MSDN Windows 7.
+          <br>Образ основан на официальном MSDN Windows 7.<br>
+          <br>Чтобы работали темы в сборке, нужно докачать патчер ниже.
         </p>
         <a href="https://drive.google.com/file/d/1kLiVEEdo4CVNg2KHUvFDQ08OJQg8-_s-/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V5 by Adderly [Google Drive]</a>
         <a href="https://www.mediafire.com/file/9amgz1s9h0yjeec/Windows+7+V5+by+Adderly.iso/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank"> Скачать Windows 7 Ultimate V5 by Adderly [MediaFire]</a>
         <a href="https://mega.nz/file/7dpzASBZ#k74bk9T0nFx3aoCg7-O-BGvj4QtSkDOeOiOGssBwR_w" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-3" target="_blank"> Скачать Windows 7 Ultimate V5 by Adderly [MEGA.NZ]</a>
-        <h6 class="u-text u-text-default u-text-white u-text-4">Windows 7 Ultimate V3.1 by Adderly (27.07.2022)<br>
+        <a href="https://www.mediafire.com/file/t78spt68gorstmd/UniversalThemePatcher.exe/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-4" target="_blank">Скачать Universal Theme Patcher для тем Windows 7</a>
+        <h6 class="u-text u-text-white u-text-4">Windows 7 Ultimate V3.1 by Adderly (27.07.2022)<br>
         </h6>
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-7" src="images/Windows7x64-2022-07-27-01-29-34.png" alt="" data-image-width="1366" data-image-height="768">
         <img class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xs u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-8" src="images/Windows7x64-2022-07-27-01-22-30.png" alt="" data-image-width="1366" data-image-height="768">
@@ -180,13 +182,13 @@
           <br>Образ основан на официальном MSDN Windows 7.<br>
           <br>В отличии от 4 версии, нет никаких тем.
         </p>
-        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-4" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
-        <a href="https://www.mediafire.com/file/kdq8r0e6tqwxfr4/Windows+7+V3.1+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-5" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MediaFire]</a>
-        <a href="https://mega.nz/file/648AwQCI#xZ2as5DflG2oDxriVGRpz-soLWP3EJIkoPjcd12s4rg" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-6" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MEGA.NZ]</a>
+        <a href="https://drive.google.com/file/d/1tBY4qkhF0xbT3D6GujfSQWcoUEWDabz3/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-5" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [Google Drive]</a>
+        <a href="https://www.mediafire.com/file/kdq8r0e6tqwxfr4/Windows+7+V3.1+by+Adderly.iso/file" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-6" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MediaFire]</a>
+        <a href="https://mega.nz/file/648AwQCI#xZ2as5DflG2oDxriVGRpz-soLWP3EJIkoPjcd12s4rg" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-7" target="_blank">Скачать Windows 7 Ultimate V3.1 by Adderly [MEGA.NZ]</a>
         <p class="u-text u-text-default u-text-white u-text-6">Смотрите так же:</p>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-7">Сборки Windows 8.1</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-8">Сборки Windows 8.0</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-9">Сборки Windows 10</a>
+        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-8">Сборки Windows 8.1</a>
+        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-9">Сборки Windows 8.0</a>
+        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-10">Сборки Windows 10</a>
       </div>
     </section>
     
